samples/_failures_safe/1761478009_55646c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_eaaff2b8.c: In function ‘main’:
./samples/SAFE/__tmp_eaaff2b8.c:140:5: error: expected declaration or statement at end of input
  140 |     Matrix mat1, mat2, result;
      |     ^~~~~~
